--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "moment": "^2.17.1",
     "mysql": "^2.13.0",
     "pug": "^2.0.0-beta11"
   }
