--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "bookshelf": "^0.10.3",
     "express": "^4.14.1",
+    "knex": "^0.12.9",
     "moment": "^2.17.1",
-    "mongoose": "^4.8.6",
-    "pug": "^2.0.0-beta11"
+    "pug": "^2.0.0-beta11",
+    "sqlite3": "^3.1.8"
   }
 }
