--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "bookshelf": "^0.10.3",
+    "bookshelf-cascade-delete": "^2.0.1",
     "express": "^4.14.1",
     "knex": "^0.12.9",
     "moment": "^2.17.1",
