--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bookshelf": "^0.10.3",
     "bookshelf-cascade-delete": "^2.0.1",
     "express": "^4.14.1",
+    "fastclick": "^1.0.6",
     "knex": "^0.12.9",
     "moment": "^2.17.1",
     "pug": "^2.0.0-beta11",
