--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.16.1",
     "bookshelf": "^0.10.3",
     "bookshelf-cascade-delete": "^2.0.1",
+    "debug": "^2.6.3",
     "express": "^4.14.1",
     "knex": "^0.12.9",
     "moment": "^2.17.1",
