--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "bookshelf": "^0.10.3",
     "bookshelf-cascade-delete": "^2.0.1",
     "debug": "^2.6.3",
-    "express": "^4.14.1",
+    "express": "^4.15.3",
     "knex": "^0.12.9",
     "moment": "^2.17.1",
     "pug": "^2.0.0-beta11",
+    "socket.io": "^2.0.3",
     "sqlite3": "^3.1.8"
   }
 }
