--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "knex": "^0.12.9",
     "moment": "^2.17.1",
     "pug": "^2.0.0-beta11",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "underscore": "^1.8.3"
   }
 }
