--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "express": "^4.15.3",
     "knex": "^0.12.9",
     "moment": "^2.17.1",
+    "mysql": "^2.14.1",
     "pug": "^2.0.0-beta11",
     "socket.io": "^2.0.3",
-    "sqlite3": "^3.1.8",
     "underscore": "^1.8.3"
   }
 }
